--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ log = "0.4.8"
 tokio = "0.2.16"
 fern = "0.6.0"
 chrono = "0.4.11"
+derive_more = "0.99.5"
+serde = "1.0.106"
+serde_json = "1.0"
+sled = "0.31.0"
