--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ derive_more = "0.99.5"
 serde = "1.0.106"
 serde_json = "1.0"
 sled = "0.31.0"
+smart-default = "0.6.0"
+regex = "1.3.6"
+lazy_static = "1.4.0"
