--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,8 @@ sled = "0.31.0"
 smart-default = "0.6.0"
 regex = "1.3.6"
 lazy_static = "1.4.0"
+reqwest = "0.10.4"
+plotlib = "0.5.1"
+svg = "0.7.1"
+resvg = { version = "0.9.0", features = ["qt-backend"] }
+uuid = { version = "0.8.1", features = ["v4"] }
