--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ plotlib = "0.5.1"
 svg = "0.7.1"
 resvg = { version = "0.9.0", features = ["qt-backend"] }
 uuid = { version = "0.8.1", features = ["v4"] }
+itertools = "0.9.0"
