--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ svg = "0.7.1"
 resvg = { version = "0.9.0", features = ["qt-backend"] }
 uuid = { version = "0.8.1", features = ["v4"] }
 itertools = "0.9.0"
+futures = "0.3.4"
